src/objects/FDPUserLastPlan__c.object
<CustomObject>
    <description>A table with the last plan that the user had loaded.</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastPlanViewed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Plan Viewed</label>
        <referenceTo>StudentDegreePlans__c</referenceTo>
        <relationshipName>FDPUserLastPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>FDPUserLastPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FDP User Last Plan</label>
    <nameField>
        <label>FDPUserLastPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FDP User Last Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>